# oxdm

./: .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  Dioxus.toml  LICENSE  ODM.md  README.md  ROADMAP.md  build.rs  clippy.toml  package.json  rust-toolchain.toml
.github/: RELEASE_NOTES_TEMPLATE.md
.github/workflows/: ci.yml  release.yml
assets/: main.css
assets/icons/concepts/: preview.html
docs/: healthcheck-groups-spec.md  metamorph-clone-landing.md  platform-notes.md
scripts/: gen-icons.sh
src/: api.rs  device_ops.rs  discovery.rs  main.rs  mock_servers.rs  persist.rs  sessions.rs  state.rs  tests.rs  util.rs
src/components/: about_dialog.rs  context_menu.rs  credentials_dialog.rs  device_list.rs  device_panel.rs  dialog.rs  dialog_overlay.rs  edit_device_dialog.rs  health_group_dialogs.rs  icon.rs  log_viewer.rs  mod.rs  shared.rs  status_bar.rs  tab_error.rs  toast.rs  topbar.rs
src/i18n/: en.rs  mod.rs  ru.rs  zh_tw.rs
src/pages/: camera_detail.rs  home.rs  mod.rs
src/tests/: api_tests.rs  i18n_tests.rs  mod.rs  state_tests.rs  util_tests.rs
src/video/: go2rtc.rs  mjpeg.rs  mod.rs
src/views/: events.rs  health_overview.rs  imaging.rs  io_control.rs  live_video.rs  main_content.rs  mod.rs  osd.rs  ptz.rs  recordings.rs  video_encoder.rs
src/views/settings/: health.rs  identification.rs  maintenance.rs  mod.rs  network.rs  quirks.rs  time.rs  users.rs
tests/: healthtab_smoke.rs  io_control_smoke.rs  recordings_smoke.rs
