[package]
name = "oxdm"
version = "0.1.0"
edition = "2021"

[dependencies]
dioxus = { version = "=0.7.4", features = ["desktop", "router"] }
oxvif = "0.8.6"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
arboard = "3"
dirs = "6"
keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service"] }
if-addrs = "0.15"
base64 = "0.22"
diqwest = "3"
percent-encoding = "2"
reqwest = "0.13"
serde_json = "1"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
