[package]
# Published as `oxvif-device-manager` — the bare `oxdm` name was already taken
# on crates.io by an unrelated crate. The installed command / executable stays
# `oxdm` via the [[bin]] entry below.
name = "oxvif-device-manager"
version = "0.2.0"
edition = "2021"
description = "A cross-platform desktop ONVIF IP camera manager built with Dioxus, on top of oxvif."
authors = ["smiti1642"]
license = "MIT"
repository = "https://github.com/smiti1642/oxdm"
readme = "README.md"
keywords = ["onvif", "ip-camera", "dioxus", "desktop", "rtsp"]
categories = ["multimedia", "gui"]
# Design-exploration SVGs / preview page and the README screenshot — not
# compiled into the binary (the README references the screenshot by absolute
# URL), so keep them out of the published crate.
exclude = ["assets/icons/concepts/", "docs/"]

# Keep the binary / command name `oxdm` even though the crate is published under
# a longer name. `cargo install oxvif-device-manager` then yields an `oxdm`
# executable, matching the bundles and the ~/.oxdm config dir.
[[bin]]
name = "oxdm"
path = "src/main.rs"

[dependencies]
dioxus = { version = "=0.7.9", features = ["desktop", "router"] }
oxvif = { version = "0.13", features = ["health", "metamorph-server"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
arboard = "3"
dirs = "6"
keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service"] }
if-addrs = "0.15"
base64 = "0.22"
digest_auth = "0.3"
percent-encoding = "2"
reqwest = "0.13"
serde_json = "1"
toml = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tracing-appender = "0.2"
rfd = "0.17"
opener = "0.8"
async-trait = "0.1"
time = { version = "0.3", features = ["local-offset"] }
# PNG decode for the runtime window icon — `tao::window::Icon::from_rgba`
# wants raw RGBA, and we keep the master `assets/icons/icon.png` as the
# only source of truth so `dx` can also use it for bundling.
png = "0.18"

[build-dependencies]
# Build-time only — used by build.rs on Windows to (1) generate a multi-
# resolution `icon.ico` from `assets/icons/icon.png` and (2) embed that ICO
# into the .exe via the Windows resource section, so Explorer / shortcuts
# pick it up without going through MSI. No-op on non-Windows targets.
image = { version = "0.25", default-features = false, features = ["png"] }
ico = "0.5"
winresource = "0.1"

[dev-dependencies]
# Pull in oxvif's mock-server + metamorph features so the smoke tests can
# record / serve / diff a clone against a real bound-port ONVIF mock without
# needing a camera. (metamorph-server is already on for the release binary
# above; listed here too for clarity.)
oxvif = { version = "0.13", features = ["mock-server", "health", "metamorph-server"] }

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
